<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="10px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- LOCAL TEAM -->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/localTeam" />

            <!-- LOCAL SCORE -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_localScore"
                android:ems="10"
                android:id="@+id/localScore" />

            <!-- VISITOR TEAM -->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visitorTeam" />

            <!-- VISITOR SCORE -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_visitorScore"
                android:ems="10"
                android:id="@+id/visitorScore" />

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_crear_partido"
                android:textStyle="bold"
                android:id="@+id/crear_partido" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
